--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myfunflix-client",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/Cocoflosbach/myFunFlix-client/issues"
   },
-  "homepage": "https://github.com/Cocoflosbach/myFunFlix-client#readme"
+  "homepage": "https://github.com/Cocoflosbach/myFunFlix-client#readme",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
