--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "homepage": "https://github.com/Cocoflosbach/myFunFlix-client#readme",
   "dependencies": {
+    "axios": "^0.24.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
   }
 }
