--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "axios": "^0.24.0",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
