--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build src/index.html --public-url ./",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -14,13 +17,11 @@
   "bugs": {
     "url": "https://github.com/Cocoflosbach/myFunFlix-client/issues"
   },
-  "homepage": "https://github.com/Cocoflosbach/myFunFlix-client#readme",
+  "homepage": "https://cocoflosbach.github.io/myFunFlix-client",
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
-    "@parcel/transformer-html": "^2.0.1",
     "axios": "^0.24.0",
-    "parcel": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -31,8 +32,9 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19"
   }
