--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "axios": "^0.24.0",
+    "parcel": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -32,7 +33,7 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "^2.0.1",
     "autoprefixer": "^10.4.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.4",
